Finsish translation for Home Page 🏠

--- a/Public/i18n/ar-SA.json
+++ b/Public/i18n/ar-SA.json
@@ -9,5 +9,18 @@
     "hello": "اهلا انا مهند",
     "subText": "مطور واجهات ويب",
     "about": "معلومات عني"
+  },
+  "aboutMe": {
+    "sectionHeader": "معلومات عني",
+    "aboutMe": "خريج هندسة الكترونيات ⚡ | مطور واجهات امامية",
+    "desc": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور "
+  },
+  "skills": {
+    "sectionHeader": "الأدوات"
+  },
+  "projects": {
+    "sectionHeader": "مشاريعي",
+    "checkProject": "اقرأ اكثر",
+    "viewAll": "كل المشاريع"
   }
 }
