--- a/Public/i18n/en-US.json
+++ b/Public/i18n/en-US.json
@@ -9,5 +9,18 @@
     "hello": "Hello I'm Mohanad",
     "subText": "Modern Web Site Developer",
     "about": "About Me"
+  },
+  "aboutMe": {
+    "sectionHeader": "About",
+    "aboutMe": "Electronics Engineer Graduate ⚡ | Web Developer Self Taught",
+    "desc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos."
+  },
+  "skills": {
+    "sectionHeader": "Skills"
+  },
+  "projects": {
+    "sectionHeader": "My Work",
+    "checkProject": "Check Project",
+    "viewAll": "View All"
   }
 }
