--- a/Public/i18n/en-US.json
+++ b/Public/i18n/en-US.json
@@ -22,5 +22,9 @@
     "sectionHeader": "My Work",
     "checkProject": "Check Project",
     "viewAll": "View All"
+  },
+  "footer": {
+    "text": "Made With Care By",
+    "name": "Mohanad Alrwaihy"
   }
 }
