Update Styles and Content 🎨

--- a/Public/i18n/ar-SA.json
+++ b/Public/i18n/ar-SA.json
@@ -6,17 +6,19 @@
     "blog": "المدونة"
   },
   "header": {
-    "hello": "اهلا انا مهند",
-    "subText": "مطور واجهات ويب",
+    "hello": "مرحبا انا مهند",
+    "subText": "مطور واجهات ويب طموح لمواكبة احدث التقنيات",
     "about": "معلومات عني"
   },
   "aboutMe": {
     "sectionHeader": "معلومات عني",
-    "aboutMe": "خريج هندسة الكترونيات ⚡ | مطور واجهات امامية",
-    "desc": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور "
+    "aboutMe": "  مهندس الكترونيات ⚡ | مطور واجهات امامية 💻",
+    "descP1": "انا مهند الرويحي خريج بكالوريس في هندسة الألكترونيات من جامعة ملتميديا في ماليزيا.",
+    "descP2": " بدأت تعلم تطوير المواقع في يونيو 2021 في احدى الأجازات بين الفصول الدراسية واخترت ان اتعلم شي متعلق بالبرمجة بسبب تجربتي  وتعلم أساسيات البرمجة في تخصصي وبعد القليل من البحث اكتشفت موقع freeCodeCamp ومن ذاك اليوم وانا اتعلم واتعمق في تطوير المواقع"
   },
   "skills": {
-    "sectionHeader": "الأدوات"
+    "sectionHeader": "الأدوات",
+    "subText": "هذه قائمة بأهم الأدوات والتقنيات التي استعملها."
   },
   "projects": {
     "sectionHeader": "مشاريعي",
