--- a/src/i18n/ar-SA.json
+++ b/src/i18n/ar-SA.json
@@ -6,14 +6,14 @@
     "blog": "المدونة"
   },
   "header": {
-    "hello": "مرحبا انا مهند",
-    "subText": "مطور واجهات ويب طموح لمواكبة احدث التقنيات",
+    "hello": "مرحبا أنا مهند",
+    "subText": "مطور واجهات ويب طموح لمواكبة أحدث التقنيات",
     "about": "معلومات عني"
   },
   "aboutMe": {
     "sectionHeader": "معلومات عني",
-    "aboutMe": "  مهندس الكترونيات ⚡ | مطور واجهات امامية 💻",
-    "descP1": "انا مهند الرويحي خريج بكالوريس في هندسة الألكترونيات من جامعة ملتميديا في ماليزيا.",
+    "aboutMe": "  مهندس إلكترونيات ⚡ | مطور واجهات أمامية 💻",
+    "descP1": "أنا مهند الرويحي خريج بكالوريس في هندسة الألكترونيات من جامعة ملتميديا في ماليزيا.",
     "descP2": " بدأت تعلم تطوير المواقع في يونيو 2021 في احدى الأجازات بين الفصول الدراسية واخترت ان اتعلم شي متعلق بالبرمجة بسبب تجربتي  وتعلم أساسيات البرمجة في تخصصي وبعد القليل من البحث اكتشفت موقع freeCodeCamp ومن ذاك اليوم وانا اتعلم واتعمق في تطوير المواقع"
   },
   "skills": {
