--- a/src/i18n/ar-SA.json
+++ b/src/i18n/ar-SA.json
@@ -3,7 +3,8 @@
     "name": "مهند الرويحي",
     "home": "الرئيسية",
     "projects": "المشاريع",
-    "blog": "المدونة"
+    "blog": "المدونة",
+    "resume": "السيرة الذاتية"
   },
   "header": {
     "hello": "مرحبا أنا مهند",
