--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -3,7 +3,8 @@
     "name": "Mohanad Alrwaihy",
     "home": "Home",
     "projects": "Projects",
-    "blog": "Blog"
+    "blog": "Blog",
+    "resume": "Resume"
   },
   "header": {
     "hello": "Hello I'm Mohanad",
