--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -7,6 +7,7 @@
     "resume": "السيرة الذاتية"
   },
   "header": {
+    "sectionHeader": "الرئيسية",
     "hello": "مرحبا أنا مهند",
     "subText": "مطور واجهات ويب طموح لمواكبة أحدث التقنيات",
     "about": "معلومات عني"
@@ -15,7 +16,7 @@
     "sectionHeader": "معلومات عني",
     "aboutMe": "  مهندس إلكترونيات ⚡ | مطور واجهات أمامية 💻",
     "descP1": "أنا مهند الرويحي خريج بكالوريس في هندسة الألكترونيات من جامعة ملتميديا في ماليزيا.",
-    "descP2": " بدأت تعلم تطوير المواقع في يونيو 2021 في احدى الأجازات بين الفصول الدراسية واخترت ان اتعلم شي متعلق بالبرمجة بسبب تجربتي  وتعلم أساسيات البرمجة في تخصصي وبعد القليل من البحث اكتشفت موقع freeCodeCamp ومن ذاك اليوم وانا اتعلم واتعمق في تطوير المواقع"
+    "descP2": " بدأت تعلم تطوير المواقع في يونيو 2021 في احدى الأجازات بين الفصول الدراسية واخترت ان اتعلم شي متعلق بالبرمجة بسبب تجربتي  وتعلم أساسيات البرمجة في تخصصي وبعد القليل من البحث اكتشفت موقع freeCodeCamp ومن ذاك اليوم وانا اتعلم واتعمق في تطوير المواقع."
   },
   "skills": {
     "sectionHeader": "الأدوات",
