--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,7 @@
     "resume": "Resume"
   },
   "header": {
+    "sectionHeader": "Hero",
     "hello": "Hello I'm Mohanad",
     "subText": "Websites developer passionate to keep up with new web technologies",
     "about": "About Me"
