style: :lipstick: Refresh styles

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -10,7 +10,8 @@
   "github": "المستودع",
   "preview": "عرض الصفحة",
   "footer": {
-    "text": "صمم بكل حب عن طريق",
-    "name": "مهند الرويحي"
+    "text": "صمم بواسطة",
+    "name": "مهند الرويحي",
+    "copyRight": "كل الحقوق محفوظة"
   }
 }
