refactor: :art: Improve style remove tailwindcss variant

--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -12,8 +12,7 @@
     "descP2": " بدأت تعلم تطوير المواقع في يونيو 2021 في احدى الأجازات بين الفصول الدراسية واخترت ان اتعلم شي متعلق بالبرمجة بسبب تجربتي  وتعلم أساسيات البرمجة في تخصصي وبعد القليل من البحث اكتشفت موقع freeCodeCamp ومن ذاك اليوم وانا اتعلم واتعمق في تطوير المواقع."
   },
   "skills": {
-    "sectionHeader": "الأدوات",
-    "subText": "هذه قائمة بأهم الأدوات والتقنيات التي استعملها."
+    "sectionHeader": "الأدوات"
   },
   "projects": {
     "sectionHeader": "مشاريعي",
