--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -12,8 +12,7 @@
     "descP2": "In June 2021 In a Trimester break I wanted to learn something new and because of my experience in my field I knew that I love anything related to coding and after doing some research I discovered freeCodeCamp and start learning more and more about Web Development Since then."
   },
   "skills": {
-    "sectionHeader": "Skills",
-    "subText": "These are the most tools I'm working with."
+    "sectionHeader": "Skills"
   },
   "projects": {
     "sectionHeader": "My Work",
