feat: :lipstick: Add Navigation to new pages

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -4,7 +4,9 @@
     "home": "الرئيسية",
     "projects": "المشاريع",
     "blog": "المدونة",
-    "resume": "السيرة الذاتية"
+    "skills": "المهارات",
+    "about": "معلومات عني",
+    "certification": "الشهادات"
   },
   "checkBtn": "اقرأ اكثر",
   "github": "المستودع",
