style: :lipstick: UI Minor Changes

--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -3,7 +3,8 @@
     "sectionHeader": "الرئيسية",
     "hello": "مرحبا أنا مهند",
     "subText": "مطور واجهات ويب طموح لمواكبة أحدث التقنيات",
-    "about": "معلومات عني"
+    "about": "معلومات عني",
+    "resume": "السيرة الذاتية"
   },
   "aboutMe": {
     "sectionHeader": "معلومات عني",
