--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -3,7 +3,8 @@
     "sectionHeader": "Hero",
     "hello": "Hello I'm Mohanad",
     "subText": "Websites developer passionate to keep up with new web technologies",
-    "about": "About Me"
+    "about": "About Me",
+    "resume": "Resume"
   },
   "aboutMe": {
     "sectionHeader": "About",
