style: :lipstick: Minor UI Fixes & Update

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,7 +5,7 @@
     "projects": "Projects",
     "blog": "Blog",
     "skills": "Skills",
-    "about": "About Me",
+    "about": "About",
     "certification": "Certification"
   },
   "checkBtn": "Check Project",
