--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -10,10 +10,10 @@
     "sectionHeader": "معلومات عني",
     "aboutMe": "  مهندس إلكترونيات ⚡ | مطور واجهات أمامية 💻",
     "descP1": "أنا مهند الرويحي خريج بكالوريس في هندسة الألكترونيات من جامعة ملتميديا في ماليزيا.",
-    "descP2": " بدأت تعلم تطوير المواقع في يونيو 2021 في احدى الأجازات بين الفصول الدراسية واخترت ان اتعلم شي متعلق بالبرمجة بسبب تجربتي  وتعلم أساسيات البرمجة في تخصصي وبعد القليل من البحث اكتشفت موقع freeCodeCamp ومن ذاك اليوم وانا اتعلم واتعمق في تطوير المواقع."
+    "descP2": "خلال فترة استراحة الفصل الدراسي في يونيو 2021 ، كنت حريصًا على توسيع معرفتي واستكشاف مهارات جديدة. نظرًا لشغفي بالبرمجة ، قمت بالبحث عن مصادر مختلفة ووجدت freeCodeCamp. بدأت على الفور في تعلم المزيد عن تطوير الويب ، وبشكل خاص NextJS وTailwindCSS وTypeScript. لقد لفتت انتباهي هذه اللغات ، وانا ابني مهاراتي فيها بنشاط الى الان."
   },
   "skills": {
-    "sectionHeader": "الأدوات"
+    "sectionHeader": "أهم الأدوات"
   },
   "projects": {
     "sectionHeader": "مشاريعي",
