fix: 🔍️ Enhance SEO & Rich text style improvements

--- a/public/locales/ar/about.json
+++ b/public/locales/ar/about.json
@@ -1,4 +1,5 @@
 {
-  "sectionHeader": "معلومات عني",
-  "description": "General Information"
+  "title": "معلومات عني",
+  "description": "اهلا! أنا مهند الرويحي، حاصل على درجة البكالوريوس في هندسة الإلكترونيات ومتحمس للعمل في تطوير الويب، متخصص في NextJS و TypeScript و TailwindCSS. لدي خبرة في تطوير واجهات مستخدم تفاعلية وديناميكية ومواقع ويب بفهم عميق لـ JavaScript و HTML5 و CSS3. أسعى للحصول على فرصة كمطوِّر واجهات أمامية لتقديم مساهمات ذات مغزى باستخدام مهاراتي ومعرفتي.",
+  "sectionHeader": "معلومات عني"
 }
