--- a/public/locales/ar/blog.json
+++ b/public/locales/ar/blog.json
@@ -1,4 +1,6 @@
 {
+  "title": "المدونة",
+  "description": "أشارك معلوماتي في تطوير المواقع | معلومات برمجية وأدوات رهيبة | والمزيد ...",
   "banner": {
     "title": "مدونة مهند",
     "welcome": "مرحبا بك في المدونة",
