--- a/public/locales/ar/certificate.json
+++ b/public/locales/ar/certificate.json
@@ -1,6 +1,7 @@
 {
-  "sectionHeader": "الشهادات",
+  "title": "الشهادات",
   "description": "في رحلتي، قمت بتطوير العديد من المشاريع واكتسبت المعرفة من مصادر مختلفة بما في ذلك الدورات التعليمية عبر الإنترنت، ومقاطع الفيديو على يوتيوب، والوثائق التقنية.",
+  "sectionHeader": "الشهادات",
   "p1": "قائمة الشهادات 👇",
   "credential": "الشهادة"
 }
