--- a/public/locales/ar/skills.json
+++ b/public/locales/ar/skills.json
@@ -1,4 +1,5 @@
 {
-  "sectionHeader": "مهاراتي",
-  "description": "هذه قائمة بأغلب التقنيات والأدوات التي استعملها بشكل يومي 😉"
+  "title": "مهاراتي",
+  "description": "هذه قائمة بأغلب التقنيات والأدوات التي استعملها بشكل يومي 😉",
+  "sectionHeader": "مهاراتي"
 }
