--- a/public/locales/en/blog.json
+++ b/public/locales/en/blog.json
@@ -1,4 +1,6 @@
 {
+  "title": "Blog",
+  "description": "Sharing My Journey in Web Development | Interesting Tools and Methods | And more...",
   "banner": {
     "title": "Mohanad Blog",
     "welcome": "Welcome to my Blog",
