--- a/public/locales/en/certificate.json
+++ b/public/locales/en/certificate.json
@@ -1,4 +1,5 @@
 {
+  "title": "Certificates",
   "sectionHeader": "Certificates",
   "description": "In my journey, I have built several projects and have gained knowledge from various sources including online courses, YouTube videos, and documentation.",
   "p1": "List of certificates 👇",
