--- a/public/locales/en/projects.json
+++ b/public/locales/en/projects.json
@@ -1,3 +1,5 @@
 {
+  "title": "Projects",
+  "description": "List of website projects that I have created using different web tools and technologies.",
   "sectionHeader": "My Projects"
 }
