--- a/public/locales/en/skills.json
+++ b/public/locales/en/skills.json
@@ -1,4 +1,5 @@
 {
-  "sectionHeader": "My Skills",
-  "description": "Here is a list for the most of the tools I used in a Daily basis 😉"
+  "title": "My Skills",
+  "description": "Here is a list of the most of the tools I used on a daily basis 😉",
+  "sectionHeader": "My Skills"
 }
