--- a/public/locales/ar/projects.json
+++ b/public/locales/ar/projects.json
@@ -1,3 +1,5 @@
 {
+  "title": "المشاريع",
+  "description": "قائمة بالكثير من المشاريع البرمجية والمواقع التي قمت بتطويرها بأستخدام عدة أدوات وتقنيات",
   "sectionHeader": "كل المشاريع"
 }
