feat(sanity): ✨ Add CustomNote component (Callout)

--- a/public/locales/ar/blog.json
+++ b/public/locales/ar/blog.json
@@ -6,5 +6,11 @@
     "welcome": "مرحبا بك في المدونة",
     "desc": "أشارك معلوماتي في تطوير المواقع | معلومات برمجية وأدوات رهيبة | والمزيد ..."
   },
-  "readPost": "أقرأ المزيد"
+  "readPost": "أقرأ المزيد",
+  "post": {
+    "note": {
+      "warning": "تحذير",
+      "tip": "نصيحة"
+    }
+  }
 }
