feat(blog): ✨ Add Custom Categories & Pagination in Blog Page

--- a/public/locales/ar/blog.json
+++ b/public/locales/ar/blog.json
@@ -6,11 +6,19 @@
     "welcome": "مرحبا بك في المدونة",
     "desc": "أشارك معلوماتي في تطوير المواقع | معلومات برمجية وأدوات رهيبة | والمزيد ..."
   },
+  "categories": {
+    "viewAll": "شاهد الكل",
+    "mostViews": "الأكثر مشاهدة",
+    "mostLiked": "الأكثر أعجاباً"
+  },
+  "next": "التالي",
+  "previous": "السابق",
   "readPost": "أقرأ المزيد",
   "post": {
     "note": {
       "warning": "تحذير",
       "tip": "نصيحة"
     }
-  }
+  },
+  "noPost": "لا يوجد المزيد من المنشورات"
 }
