feat(blog): ✨ Add recommended posts

--- a/public/locales/ar/blog.json
+++ b/public/locales/ar/blog.json
@@ -20,5 +20,6 @@
       "tip": "نصيحة"
     }
   },
-  "noPost": "لا يوجد المزيد من المنشورات"
+  "noPost": "لا يوجد المزيد من المنشورات",
+  "recommendation": "منشورات مقترحة"
 }
