--- a/public/locales/en/blog.json
+++ b/public/locales/en/blog.json
@@ -20,5 +20,6 @@
       "tip": "Tip"
     }
   },
-  "noPost": "No Post Available"
+  "noPost": "No Post Available",
+  "recommendation": "Recommended Posts"
 }
