--- a/public/locales/ar/blog.json
+++ b/public/locales/ar/blog.json
@@ -14,6 +14,7 @@
   "next": "التالي",
   "previous": "السابق",
   "readPost": "أقرأ المزيد",
-  "noPost": "لا يوجد المزيد من المنشورات",
+  "noResult": "لا يوجد نتائج لهذا البحث",
+  "searchPlaceholder": "أبحث عن مدونة...",
   "recommendation": "منشورات مقترحة"
 }
