--- a/public/locales/en/blog.json
+++ b/public/locales/en/blog.json
@@ -14,6 +14,7 @@
   "next": "Next",
   "previous": "Previous",
   "readPost": "Read Post",
-  "noPost": "No Post Available",
+  "noResult": "No result found",
+  "searchPlaceholder": "Search for post...",
   "recommendation": "Recommended Posts"
 }
