style: 💄 Improve Swiper images for projects

--- a/public/locales/ar/projects.json
+++ b/public/locales/ar/projects.json
@@ -1,5 +1,8 @@
 {
   "title": "المشاريع",
   "description": "قائمة بالكثير من المشاريع البرمجية والمواقع التي قمت بتطويرها بأستخدام عدة أدوات وتقنيات",
-  "sectionHeader": "كل المشاريع"
+  "sectionHeader": "كل المشاريع",
+  "slug": {
+    "slide": "الصورة {{current}} من {{count}}"
+  }
 }
