--- a/public/locales/en/projects.json
+++ b/public/locales/en/projects.json
@@ -1,5 +1,8 @@
 {
   "title": "Projects",
   "description": "List of website projects that I have created using different web tools and technologies.",
-  "sectionHeader": "My Projects"
+  "sectionHeader": "My Projects",
+  "slug": {
+    "slide": "Slide {{current}} of {{count}}"
+  }
 }
