feat(projects): ✨ Add Projects Category

--- a/public/locales/ar/projects.json
+++ b/public/locales/ar/projects.json
@@ -2,6 +2,7 @@
   "title": "المشاريع",
   "description": "قائمة بالكثير من المشاريع البرمجية والمواقع التي قمت بتطويرها بأستخدام عدة أدوات وتقنيات",
   "sectionHeader": "كل المشاريع",
+  "sectionDescription": "قائمة بكل المشاريع",
   "slug": {
     "slide": "الصورة {{current}} من {{count}}"
   }
